// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserContextualizedLocDetails renders for VTP 1`] = `
<LocPane
  contributionMode="VTP"
  loc={
    Object {
      "closed": false,
      "createdOn": "",
      "decisionOn": "",
      "description": "Description",
      "files": Array [],
      "id": UUID {
        "bytes": Array [
          147,
          99,
          195,
          214,
          209,
          7,
          66,
          26,
          164,
          75,
          133,
          199,
          250,
          176,
          184,
          67,
        ],
      },
      "links": Array [],
      "locType": "Identity",
      "metadata": Array [],
      "ownerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
      "requesterLocId": undefined,
      "selectedParties": Array [],
      "status": "OPEN",
      "verifiedThirdParty": false,
    }
  }
>
  <VTPInfo />
  <LocDetailsTab
    checkResult={
      Object {
        "result": "NONE",
      }
    }
    legalOfficer={
      Object {
        "additionalDetails": "",
        "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        "logoUrl": "",
        "name": "Patrick Gielen",
        "node": "http://logion.patrick.com",
        "postalAddress": Object {
          "city": "Etterbeek",
          "company": "MODERO",
          "country": "Belgique",
          "line1": "Huissier de Justice Etterbeek",
          "line2": "Rue Beckers 17",
          "postalCode": "1040",
        },
        "userIdentity": Object {
          "email": "patrick@logion.network",
          "firstName": "Patrick",
          "lastName": "Gielen",
          "phoneNumber": "+32 498 237 107",
        },
      }
    }
    loc={
      Object {
        "closed": false,
        "createdOn": "",
        "decisionOn": "",
        "description": "Description",
        "files": Array [],
        "id": UUID {
          "bytes": Array [
            147,
            99,
            195,
            214,
            209,
            7,
            66,
            26,
            164,
            75,
            133,
            199,
            250,
            176,
            184,
            67,
          ],
        },
        "links": Array [],
        "locType": "Identity",
        "metadata": Array [],
        "ownerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
        "requesterLocId": undefined,
        "selectedParties": Array [],
        "status": "OPEN",
        "verifiedThirdParty": false,
      }
    }
    locItems={Array []}
    viewer="User"
  />
  <React.Fragment>
    <VoidDisclaimer
      loc={
        Object {
          "closed": false,
          "createdOn": "",
          "decisionOn": "",
          "description": "Description",
          "files": Array [],
          "id": UUID {
            "bytes": Array [
              147,
              99,
              195,
              214,
              209,
              7,
              66,
              26,
              164,
              75,
              133,
              199,
              250,
              176,
              184,
              67,
            ],
          },
          "links": Array [],
          "locType": "Identity",
          "metadata": Array [],
          "ownerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
          "requesterLocId": undefined,
          "selectedParties": Array [],
          "status": "OPEN",
          "verifiedThirdParty": false,
        }
      }
    />
    <CertificateAndLimits
      loc={
        Object {
          "closed": false,
          "createdOn": "",
          "decisionOn": "",
          "description": "Description",
          "files": Array [],
          "id": UUID {
            "bytes": Array [
              147,
              99,
              195,
              214,
              209,
              7,
              66,
              26,
              164,
              75,
              133,
              199,
              250,
              176,
              184,
              67,
            ],
          },
          "links": Array [],
          "locType": "Identity",
          "metadata": Array [],
          "ownerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
          "requesterLocId": undefined,
          "selectedParties": Array [],
          "status": "OPEN",
          "verifiedThirdParty": false,
        }
      }
      viewer="User"
    />
    <SupersedesDisclaimer
      loc={
        Object {
          "closed": false,
          "createdOn": "",
          "decisionOn": "",
          "description": "Description",
          "files": Array [],
          "id": UUID {
            "bytes": Array [
              147,
              99,
              195,
              214,
              209,
              7,
              66,
              26,
              164,
              75,
              133,
              199,
              250,
              176,
              184,
              67,
            ],
          },
          "links": Array [],
          "locType": "Identity",
          "metadata": Array [],
          "ownerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
          "requesterLocId": undefined,
          "selectedParties": Array [],
          "status": "OPEN",
          "verifiedThirdParty": false,
        }
      }
    />
    <CheckFileFrame
      checkResult="NONE"
      checkedItem="confidential document"
      context="Identity LOC"
    />
  </React.Fragment>
</LocPane>
`;

exports[`UserContextualizedLocDetails renders for requester 1`] = `
<LocPane
  contributionMode="Requester"
  loc={
    Object {
      "closed": false,
      "createdOn": "",
      "decisionOn": "",
      "description": "Description",
      "files": Array [],
      "id": UUID {
        "bytes": Array [
          147,
          99,
          195,
          214,
          209,
          7,
          66,
          26,
          164,
          75,
          133,
          199,
          250,
          176,
          184,
          67,
        ],
      },
      "links": Array [],
      "locType": "Identity",
      "metadata": Array [],
      "ownerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
      "requesterLocId": undefined,
      "selectedParties": Array [],
      "status": "OPEN",
      "verifiedThirdParty": false,
    }
  }
>
  <LocDetailsTab
    checkResult={
      Object {
        "result": "NONE",
      }
    }
    legalOfficer={
      Object {
        "additionalDetails": "",
        "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        "logoUrl": "",
        "name": "Patrick Gielen",
        "node": "http://logion.patrick.com",
        "postalAddress": Object {
          "city": "Etterbeek",
          "company": "MODERO",
          "country": "Belgique",
          "line1": "Huissier de Justice Etterbeek",
          "line2": "Rue Beckers 17",
          "postalCode": "1040",
        },
        "userIdentity": Object {
          "email": "patrick@logion.network",
          "firstName": "Patrick",
          "lastName": "Gielen",
          "phoneNumber": "+32 498 237 107",
        },
      }
    }
    loc={
      Object {
        "closed": false,
        "createdOn": "",
        "decisionOn": "",
        "description": "Description",
        "files": Array [],
        "id": UUID {
          "bytes": Array [
            147,
            99,
            195,
            214,
            209,
            7,
            66,
            26,
            164,
            75,
            133,
            199,
            250,
            176,
            184,
            67,
          ],
        },
        "links": Array [],
        "locType": "Identity",
        "metadata": Array [],
        "ownerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
        "requesterLocId": undefined,
        "selectedParties": Array [],
        "status": "OPEN",
        "verifiedThirdParty": false,
      }
    }
    locItems={Array []}
    viewer="User"
  />
  <React.Fragment>
    <VoidDisclaimer
      loc={
        Object {
          "closed": false,
          "createdOn": "",
          "decisionOn": "",
          "description": "Description",
          "files": Array [],
          "id": UUID {
            "bytes": Array [
              147,
              99,
              195,
              214,
              209,
              7,
              66,
              26,
              164,
              75,
              133,
              199,
              250,
              176,
              184,
              67,
            ],
          },
          "links": Array [],
          "locType": "Identity",
          "metadata": Array [],
          "ownerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
          "requesterLocId": undefined,
          "selectedParties": Array [],
          "status": "OPEN",
          "verifiedThirdParty": false,
        }
      }
    />
    <CertificateAndLimits
      loc={
        Object {
          "closed": false,
          "createdOn": "",
          "decisionOn": "",
          "description": "Description",
          "files": Array [],
          "id": UUID {
            "bytes": Array [
              147,
              99,
              195,
              214,
              209,
              7,
              66,
              26,
              164,
              75,
              133,
              199,
              250,
              176,
              184,
              67,
            ],
          },
          "links": Array [],
          "locType": "Identity",
          "metadata": Array [],
          "ownerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
          "requesterLocId": undefined,
          "selectedParties": Array [],
          "status": "OPEN",
          "verifiedThirdParty": false,
        }
      }
      viewer="User"
    />
    <SupersedesDisclaimer
      loc={
        Object {
          "closed": false,
          "createdOn": "",
          "decisionOn": "",
          "description": "Description",
          "files": Array [],
          "id": UUID {
            "bytes": Array [
              147,
              99,
              195,
              214,
              209,
              7,
              66,
              26,
              164,
              75,
              133,
              199,
              250,
              176,
              184,
              67,
            ],
          },
          "links": Array [],
          "locType": "Identity",
          "metadata": Array [],
          "ownerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
          "requesterLocId": undefined,
          "selectedParties": Array [],
          "status": "OPEN",
          "verifiedThirdParty": false,
        }
      }
    />
    <CheckFileFrame
      checkResult="NONE"
      checkedItem="confidential document"
      context="Identity LOC"
    />
  </React.Fragment>
</LocPane>
`;
